Index.html edited

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="row flex-nowrap justify-content-between align-items-center">
                 <div class="col-3 pt-1">
-                    <a href="/" class="blog-header-logo text-body-emphasis text-decoration-none ">
+                    <a href="/index" class="blog-header-logo text-body-emphasis text-decoration-none ">
                         <span class="fs-5">FLEXIBLEWORK HUB</span>
                     </a>
                 </div>
