--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,163 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
-</body>
+{% extends "base.html" %}
+{% block title_block %}Home{% endblock %}
+<html lang="en">
+   
+    <body>
+        {% block body_block %}
+        <div class="container-wrapper">
+            <style>
+                .sorted-bar {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin-block: 10px 10px;
+                } 
+                .btn {
+                    margin: 10px;
+                    padding: 10px;
+                    border: 1px solid #26462b;
+                    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+                }
+                .job-listing {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center; 
+                }
+                .job {
+                    width: 90%;
+                    justify-content: center;
+                    border: 1px solid #dcdcdc;
+                    margin-block: 10px 10px;
+                    padding: 20px;
+                    border-radius: 10px;
+                    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+                }
+                .job-details {
+                    display: flex;
+                    justify-content: space-between;
+                    flex-wrap: wrap;  
+                    padding-right: 10%; 
+                }
+
+            </style>
+            <div class="sorted-bar">
+                
+                <div class="dropdown">
+                    <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                        Location
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item" href="#" data-filter="1-option1">Glasgow</a></li>
+                        <li><a class="dropdown-item" href="#" data-filter="1-option2">Edingburgh</a></li>
+                        <li><a class="dropdown-item" href="#" data-filter="1-option3">Stirling</a></li>
+                        <li><a class="dropdown-item" href="#" data-filter="1-option4">Aberdeen</a></li>
+                    </ul>
+                </div>
+            
+                <div class="dropdown">
+                    <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                        Industry
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+                        <li><a class="dropdown-item" href="#" data-filter="2-option1">Retail</a></li>
+                        <li><a class="dropdown-item" href="#" data-filter="2-option2">Construction, Repair and Maintenance Services</a></li>
+                        <li><a class="dropdown-item" href="#" data-filter="2-option3">Personal Customer Services</a></li>
+                        <li><a class="dropdown-item" href="#" data-filter="2-option4">Restaurants & Food Services</a></li>
+                        <li><a class="dropdown-item" href="#" data-filter="2-option5">Hotel & Travel Accommodation</a></li>
+                        <li><a class="dropdown-item" href="#" data-filter="2-option6">Others</a></li>
+                    </ul>
+                </div>
+            
+                <div class="dropdown">
+                    <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton3" data-bs-toggle="dropdown" aria-expanded="false">
+                        Job Type
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton3">
+                        <li><a class="dropdown-item" href="#" data-filter="3-option1">Part-Time</a></li>
+                        <li><a class="dropdown-item" href="#" data-filter="3-option2">Temporary</a></li>
+                        <li><a class="dropdown-item" href="#" data-filter="3-option3">Volunteer</a></li>
+                </div>
+
+                <div class="dropdown">
+                    <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton4" data-bs-toggle="dropdown" aria-expanded="false">
+                        Education Level
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton4">
+                        <li><a class="dropdown-item" href="#" data-filter="4-option1">Foundation Degree</a></li>
+                        <li><a class="dropdown-item" href="#" data-filter="4-option2">GCSE</a></li>
+                        <li><a class="dropdown-item" href="#" data-filter="4-option3">Certificate of Higher Education</a></li>
+                        <li><a class="dropdown-item" href="#" data-filter="4-option4">Bachelor's Degree</a></li>
+                    </ul>
+                </div>
+
+                <div class="dropdown">
+                    <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton6" data-bs-toggle="dropdown" aria-expanded="false">
+                        Remote
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton4">
+                        <li><a class="dropdown-item" href="#" data-filter="5-option1">In-Person</a></li>
+                        <li><a class="dropdown-item" href="#" data-filter="5-option2">Hybrid</a></li>
+                        <li><a class="dropdown-item" href="#" data-filter="5-option3">Remote</a></li>
+                    </ul>
+                </div>
+
+                <div class="dropdown">
+                    <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton5" data-bs-toggle="dropdown" aria-expanded="false">
+                        Sorted by Salary
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton4">
+                        <li><a class="dropdown-item" href="#" data-filter="6-option1">From highest to lowest</a></li>
+                        <li><a class="dropdown-item" href="#" data-filter="6-option2">From lowest to highest</a></li>
+                    </ul>
+                </div>
+    
+            </div>
+
+            <div class="job-listing">
+                <div class="row">
+                
+                    <div class="col-12"> 
+                        <div class="job">
+                            <h2>Weekend Serviced Apartment Assistant (Reception)</h2>
+                                <p>xxxx company</p>
+                                <div class="job-details">
+                                    <p><b>Salary:</b> £10.75 an hour</p>
+                                    <p><b>Remote:</b> In-Person</p>
+                                    <p><b>Job Type:</b> Temporary</p>
+                                </div>
+                                <p><b>Shift and Schedule:</b> weekend availability</p>
+                                <p><b>Education Level Requirement:</b> GCSE</p>
+                                <p><b>skills:</b> Communication, Attention to detail</p>
+                                <p><b>Description:</b> We are currently recruiting an enthusiastic and customer focussed Serviced Apartment Assistant based in our Glasgow location. This would mainly be a weekend position, with additional weekday shifts sometimes available. </p>
+                        </div>
+                    </div>
+
+                    <div class="col-12">  
+                        <div class="job">
+                            <h2>Bookkeeper</h2>
+                                <p>yyyy company</p>
+                                <div class="job-details">
+                                    <p>Salary: £15 an hour</p>
+                                    <p>Remote: In-Person</p>
+                                    <p>Job type: Part-Time</p>
+                                    <p>Shift and Schedule: flexible</p>
+                                    <p>Education Level Requirement: GCSE</p>
+                                </div>
+                                <p>skills: English Communication, Organisation</p>
+                                <p>Job Description: looking for a highly organised, part-time bookkeeper to join our small, family-run business. You will work from our Glasgow based offices. This role is for 16 hours a month as required with a flexible schedule to work around your existing lifestyle.</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    
+          
+        {% endblock %}
+
+    </body>
+    
 </html>
