--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,18 @@
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
+    <style>
+        main {
+            padding-top: 120px; /* Adjust the padding to match the height of your fixed header */
+        }
+        header {
+            position: fixed;
+            width: 100%;
+            background-color: #ffffff; /* Add your desired background color */
+            z-index: 1000; /* Make sure the header is on top of other elements */
+        }
+    </style>   
 </head>
 
 <body>
@@ -19,7 +31,7 @@
             <div class="row flex-nowrap justify-content-between align-items-center">
                 <div class="col-3 pt-1">
                     <a href="/index" class="blog-header-logo text-body-emphasis text-decoration-none ">
-                        <span class="fs-5">FLEXIBLEWORK HUB</span>
+                        <span class="fs-5 text-nowrap">FLEXIBLEWORK HUB</span>
                     </a>
                 </div>
 
