--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,8 @@
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                                 <li><a class="dropdown-item" href="#" data-filter="1-option1">Glasgow</a></li>
-                                <li><a class="dropdown-item" href="#" data-filter="1-option2">Edingburgh</a></li>
+                                <li><a class="dropdown-item" href="#" data-filter="1-option2">Edinburgh</a></li>
+<!--                                爱丁堡拼错了给你改了一下，阅后删-->
                                 <li><a class="dropdown-item" href="#" data-filter="1-option3">Stirling</a></li>
                                 <li><a class="dropdown-item" href="#" data-filter="1-option4">Aberdeen</a></li>
                             </ul>
