--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <header class="p-3 mb-3 border-bottom">
+    <header class="p-3 mb-3 border-bottom text-bg-light">
         <div class="container">
             <div class="row flex-nowrap justify-content-between align-items-center">
                 <div class="col-3 pt-1">
