correct the  formatting error in base.html, and make some adjustments to employerInfo.html and jobSeekerInfo.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
             background-color: #ffffff; /* Add your desired background color */
             z-index: 1000; /* Make sure the header is on top of other elements */
         }
-    </style>   
+    </style>
 </head>
 
 <body>
@@ -60,7 +60,7 @@
     </header>
 
     <main class="container">
-        <div class="row flex-nowrap justify-content-between align-items-center">
+        <div class="container flex-nowrap justify-content-between align-items-center">
             {% block body_block %}{% endblock%}
         </div>
 
