--- a/templates/employerInfo.html
+++ b/templates/employerInfo.html
@@ -9,9 +9,15 @@ Company Information
 {% block body_block %}
 
 <!-- My profile部分 -->
-<h3 class="pb-4 mb-4 fst-italic border-bottom">
-    My Profile
-</h3>
+<div class="row pb-4 mb-4 border-bottom">
+    <div class="col">
+        <h3 class=" fst-italic ">
+            My Profile
+        </h3></div>
+    <div class="col-auto">
+        <button type="button" class="btn btn-primary btn-sm px-4 me-md-2">Edit</button>
+    </div>
+</div>
 
 <div class="bd-content ps-lg-2 pb-4 mb-2">
     <ul>
@@ -30,9 +36,15 @@ Company Information
 
 
 <!-- My Posts部分 -->
-<h3 class="pb-4 mb-4 fst-italic border-bottom">
-    My Posts
-</h3>
+<div class="row pb-4 mb-4 border-bottom">
+    <div class="col">
+        <h3 class=" fst-italic ">
+            My Profile
+        </h3></div>
+    <div class="col-auto">
+        <button type="button" class="btn btn-primary btn-sm px-4 me-md-2">New</button>
+    </div>
+</div>
 
 <div class="bd-content ps-lg-2  pb-4 mb-4 ">
     <div class=list-group>
@@ -70,7 +82,7 @@ Company Information
     <div class=list-group>
         <a href="#" class="list-group-item list-group-item-action">
             <div class="d-flex w-100 justify-content-between my-2">
-                <h5 class="mb-1 text-primary">shangsan</h4>
+                <h5 class="mb-1 text-primary">shangsan</h5>
             </div>
             <p class="mb-1">Job: Sales Associate</p>
             <p class="mb-1">Rate: 3.0/5.0</p>
@@ -82,7 +94,7 @@ Company Information
         </a>
         <a href="#" class="list-group-item list-group-item-action">
             <div class="d-flex w-100 justify-content-between my-2">
-                <h5 class="mb-1 text-primary">shangsan</h4>
+                <h5 class="mb-1 text-primary">shangsan</h5>
             </div>
             <p class="mb-1">Job: Sales Associate</p>
             <p class="mb-1">Rate: 3.0/5.0</p>
@@ -94,7 +106,7 @@ Company Information
         </a>
         <a href="#" class="list-group-item list-group-item-action">
             <div class="d-flex w-100 justify-content-between my-2">
-                <h5 class="mb-1 text-primary">shangsan</h4>
+                <h5 class="mb-1 text-primary">shangsan</h5>
             </div>
             <p class="mb-1">Job: Sales Associate</p>
             <p class="mb-1">Rate: 5.0/5.0</p>
