--- a/templates/jobSeekerInfo.html
+++ b/templates/jobSeekerInfo.html
@@ -9,9 +9,16 @@ Job Seeker Information
 {% block body_block %}
 
 <!-- My profile部分 -->
-<h3 class="pb-4 mb-4 fst-italic border-bottom">
-    My Profile
-</h3>
+<div class="row pb-4 mb-4 border-bottom">
+    <div class="col">
+        <h3 class=" fst-italic ">
+            My Profile
+        </h3></div>
+    <div class="col-auto">
+        <button type="button" class="btn btn-primary btn-sm px-4 me-md-2">Edit</button>
+    </div>
+</div>
+
 
 <div class="bd-content ps-lg-2 pb-4 mb-2">
     <ul>
@@ -48,16 +55,16 @@ Job Seeker Information
         </a>
         <a href="#" class="list-group-item list-group-item-action">
             <div class="d-flex w-100 justify-content-between my-2">
-                <h5 class="mb-1 text-primary">Restaurant Customer Advisor</h4>
-                    <small class="text-muted">5 days ago</small>
+                <h5 class="mb-1 text-primary">Restaurant Customer Advisor</h5>
+                <small class="text-muted">5 days ago</small>
             </div>
             <p class="mb-1">Dobbies Garden Centres Ltd</p>
             <p class="mb-1">Glasgow G21</p>
         </a>
         <a href="#" class="list-group-item list-group-item-action">
             <div class="d-flex w-100 justify-content-between my-2">
-                <h5 class="mb-1 text-primary">Accounts Assistant</h4>
-                    <small class="text-muted">7 days ago</small>
+                <h5 class="mb-1 text-primary">Accounts Assistant</h5>
+                <small class="text-muted">7 days ago</small>
             </div>
             <p class="mb-1">Architectural Ironmongers</p>
             <p class="mb-1">Glasgow</p>
@@ -75,7 +82,8 @@ Job Seeker Information
     <div class=list-group>
         <a href="#" class="list-group-item list-group-item-action">
             <div class="d-flex w-100 justify-content-between my-2">
-                <h5 class="mb-1 text-primary">Lottery Fundraiser</h4>
+                <h5 class="mb-1 text-primary">Lottery Fundraiser</h5>
+                <button type="button" class="btn btn-primary btn-sm px-4 me-md-2">Edit</button>
             </div>
             <p class="mb-1">Excel Fundraising</p>
             <p class="mb-1">Rate: 3.0/5.0</p>
@@ -88,7 +96,8 @@ Job Seeker Information
         </a>
         <a href="#" class="list-group-item list-group-item-action">
             <div class="d-flex w-100 justify-content-between my-2">
-                <h5 class="mb-1 text-primary">Lottery Fundraiser</h4>
+                <h5 class="mb-1 text-primary">Lottery Fundraiser</h5>
+                <button type="button" class="btn btn-primary btn-sm px-4 me-md-2">Edit</button>
             </div>
             <p class="mb-1">Excel Fundraising</p>
             <p class="mb-1">Rate: 3.0/5.0</p>
@@ -101,7 +110,8 @@ Job Seeker Information
         </a>
         <a href="#" class="list-group-item list-group-item-action">
             <div class="d-flex w-100 justify-content-between my-2">
-                <h5 class="mb-1 text-primary">Lottery Fundraiser</h4>
+                <h5 class="mb-1 text-primary">Lottery Fundraiser</h5>
+                <button type="button" class="btn btn-primary btn-sm px-4 me-md-2">Edit</button>
             </div>
             <p class="mb-1">Excel Fundraising</p>
             <p class="mb-1">Rate: 3.0/5.0</p>
