--- a/templates/employerInfo.html
+++ b/templates/employerInfo.html
@@ -39,7 +39,7 @@ Company Information
 <div class="row pb-4 mb-4 border-bottom">
     <div class="col">
         <h3 class=" fst-italic ">
-            My Profile
+            My Posts
         </h3></div>
     <div class="col-auto">
         <button type="button" class="btn btn-primary btn-sm px-4 me-md-2">New</button>
