--- a/templates/employerInfo.html
+++ b/templates/employerInfo.html
@@ -15,7 +15,67 @@ Company Information
             My Profile
         </h3></div>
     <div class="col-auto">
-        <button type="button" class="btn btn-primary btn-sm px-4 me-md-2">Edit</button>
+        <button type="button" class="btn btn-primary btn-sm px-4 me-md-2" data-bs-toggle="modal"
+                data-bs-target="#profileModal">Edit
+        </button>
+
+        <!-- The Modal -->
+        <div class="modal" id="profileModal">
+            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Company Profile</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+
+                    <!-- Modal Body -->
+                    <div class="modal-body">
+                        <!-- The form goes here -->
+                        <form>
+                            <div class="form-group mb-3">
+                                <label for="username" class="form-label">Company name</label>
+                                <input type="text" class="form-control" id="username"
+                                       placeholder="Company name">
+                            </div>
+                            <div class="form-group mb-3">
+                                <label for="phone" class="form-label">Phone</label>
+                                <input type="text" class="form-control" id="phone"
+                                       placeholder="Phone">
+                            </div>
+                            <div class="form-group mb-3">
+                                <label for="Email" class="form-label">Email</label>
+                                <input type="email" class="form-control" id="Email"
+                                       placeholder="name@example.com">
+                            </div>
+                            <div class="form-group mb-3">
+                                <label for="City" class="form-label">City</label>
+                                <input type="text" class="form-control" id="City"
+                                       placeholder="City">
+                            </div>
+                            <div class="form-group mb-3">
+                                <label for="Address" class="form-label">Address</label>
+                                <input type="text" class="form-control" id="Address"
+                                       placeholder="Address">
+                            </div>
+                            <div class="form-group mb-3">
+                                <label for="Introduction" class="form-label">Company Introduction</label>
+                                <textarea class="form-control" id="Introduction" rows="5"
+                                                  placeholder="Introduction"></textarea>
+                            </div>
+
+                            <!-- Modal Footer -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
 
@@ -42,7 +102,74 @@ Company Information
             My Posts
         </h3></div>
     <div class="col-auto">
-        <button type="button" class="btn btn-primary btn-sm px-4 me-md-2">New</button>
+        <button type="button" class="btn btn-primary btn-sm px-4 me-md-2" data-bs-toggle="modal"
+                data-bs-target="#postModal">New
+        </button>
+
+        <!-- The Modal -->
+        <div class="modal" id="postModal">
+            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">New Post</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+
+                    <!-- Modal Body -->
+                    <div class="modal-body">
+                        <!-- Your form goes here -->
+                        <form>
+                            <div class="form-group mb-3">
+                                <label for="Job" class="form-label">Job</label>
+                                <input type="text" class="form-control" id="Job"
+                                       placeholder="Job">
+                            </div>
+                            <div class="form-group mb-3">
+                                <label for="Salary" class="form-label">Salary</label>
+                                <input type="number" class="form-control" id="Salary"
+                                       placeholder="Salary">
+                            </div>
+                            <div class="form-group mb-3">
+                                <label for="JobCity" class="form-label">City</label>
+                                <input type="text" class="form-control" id="JobCity"
+                                       placeholder="City">
+                            </div>
+                            <div class="form-group mb-3">
+                                <label for="JobType" class="form-label">Job Type</label>
+                                <select class="form-select" id="JobType" aria-label="Default select example">
+                                    <option selected>Open to select job type</option>
+                                    <option value="1">Part-Time</option>
+                                    <option value="2">Temporary</option>
+                                    <option value="3">Volunteer</option>
+                                </select>
+                            </div>
+                            <div class="form-group mb-3">
+                                <label for="Remote" class="form-label">Remote</label>
+                                <select class="form-select" id="Remote" aria-label="Default select example">
+                                    <option selected>Open to select remote type</option>
+                                    <option value="1">In-Person</option>
+                                    <option value="2">Hybrid</option>
+                                    <option value="3">Remote</option>
+                                </select>
+                            </div>
+                            <div class="form-group mb-3">
+                                <label for="Note" class="form-label">Note</label>
+                                <textarea class="form-control" id="Note" rows="5"
+                                                  placeholder="Add any additional comments or notes"></textarea>
+                            </div>
+
+                            <!-- Modal Footer -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
