--- a/templates/jobSeekerInfo.html
+++ b/templates/jobSeekerInfo.html
@@ -15,7 +15,66 @@ Job Seeker Information
             My Profile
         </h3></div>
     <div class="col-auto">
-        <button type="button" class="btn btn-primary btn-sm px-4 me-md-2">Edit</button>
+        <button type="button" class="btn btn-primary btn-sm px-4 me-md-2" data-bs-toggle="modal"
+                data-bs-target="#profileModal">Edit
+        </button>
+
+        <!-- The Modal -->
+        <div class="modal" id="profileModal">
+            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Personal Profile</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+
+                    <!-- Modal Body -->
+                    <div class="modal-body">
+                        <!-- The form goes here -->
+                        <form>
+                            <div class="form-group mb-3">
+                                <label for="username" class="form-label">Username</label>
+                                <input type="text" class="form-control" id="username"
+                                       placeholder="Company name">
+                            </div>
+                            <div class="form-group mb-3">
+                                <label for="Age" class="form-label">Age</label>
+                                <input type="text" class="form-control" id="Age"
+                                       placeholder="Age">
+                            </div>
+                            <div class="form-group mb-3">
+                                <label for="phone" class="form-label">Phone</label>
+                                <input type="text" class="form-control" id="phone"
+                                       placeholder="Phone">
+                            </div>
+                            <div class="form-group mb-3">
+                                <label for="Email" class="form-label">Email</label>
+                                <input type="email" class="form-control" id="Email"
+                                       placeholder="name@example.com">
+                            </div>
+                            <div class="form-group mb-3">
+                                <label for="City" class="form-label">City</label>
+                                <input type="text" class="form-control" id="City"
+                                       placeholder="City">
+                            </div>
+                            <div class="form-group mb-3">
+                                <label for="Introduction" class="form-label">Self Introduction</label>
+                                <textarea class="form-control" id="Introduction" rows="5"
+                                          placeholder="Introduction"></textarea>
+                            </div>
+
+                            <!-- Modal Footer -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -78,12 +137,53 @@ Job Seeker Information
     My Reviews
 </h3>
 
-<div class="bd-content ps-lg-2  pb-4 mb-4 ">
+<div class="bd-content ps-lg-2 pb-4 mb-4 ">
     <div class=list-group>
-        <a href="#" class="list-group-item list-group-item-action">
+        <a href="javascript:void(0)" class="list-group-item">
             <div class="d-flex w-100 justify-content-between my-2">
                 <h5 class="mb-1 text-primary">Lottery Fundraiser</h5>
-                <button type="button" class="btn btn-primary btn-sm px-4 me-md-2">Edit</button>
+                <button type="button" class="btn btn-primary btn-sm px-4 me-md-2" data-bs-toggle="modal"
+                        data-bs-target="#EditReview1">Edit
+                </button>
+
+                <!-- The Modal -->
+                <div class="modal" id="EditReview1">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-content">
+
+                            <!-- Modal Header -->
+                            <div class="modal-header">
+                                <h4 class="modal-title">Edit Review</h4>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                            </div>
+
+                            <!-- Modal Body -->
+                            <div class="modal-body">
+                                <!-- The form goes here -->
+                                <form>
+                                    <div class="form-group mb-3">
+                                        <label for="Rating" class="form-label">Rate</label>
+                                        <input type="number" class="form-control" id="Rating" min="0" max="5" step="0.5"
+                                               placeholder="Enter your rating">
+                                    </div>
+                                    <div class="form-group mb-3">
+                                        <label for="Comments" class="form-label">Comment</label>
+                                        <textarea class="form-control" id="Comments" rows="5"
+                                                  placeholder="Add your comments here"></textarea>
+                                    </div>
+
+                                    <!-- Modal Footer -->
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
+                                        </button>
+                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <p class="mb-1">Excel Fundraising</p>
             <p class="mb-1">Rate: 3.0/5.0</p>
@@ -94,10 +194,51 @@ Job Seeker Information
                                 Having a supportive and understanding boss has made the work environment
                                 enjoyable.</span></p>
         </a>
-        <a href="#" class="list-group-item list-group-item-action">
+        <a href="javascript:void(0)" class="list-group-item">
             <div class="d-flex w-100 justify-content-between my-2">
                 <h5 class="mb-1 text-primary">Lottery Fundraiser</h5>
-                <button type="button" class="btn btn-primary btn-sm px-4 me-md-2">Edit</button>
+                <button type="button" class="btn btn-primary btn-sm px-4 me-md-2" data-bs-toggle="modal"
+                        data-bs-target="#EditReview2">Edit
+                </button>
+
+                <!-- The Modal -->
+                <div class="modal" id="EditReview2">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-content">
+
+                            <!-- Modal Header -->
+                            <div class="modal-header">
+                                <h4 class="modal-title">Edit Review</h4>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                            </div>
+
+                            <!-- Modal Body -->
+                            <div class="modal-body">
+                                <!-- The form goes here -->
+                                <form>
+                                    <div class="form-group mb-3">
+                                        <label for="Rating" class="form-label">Rate</label>
+                                        <input type="number" class="form-control" id="Rating" min="0" max="5" step="0.5"
+                                               placeholder="Enter your rating">
+                                    </div>
+                                    <div class="form-group mb-3">
+                                        <label for="Comments" class="form-label">Comment</label>
+                                        <textarea class="form-control" id="Comments" rows="5"
+                                                  placeholder="Add your comments here"></textarea>
+                                    </div>
+
+                                    <!-- Modal Footer -->
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
+                                        </button>
+                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <p class="mb-1">Excel Fundraising</p>
             <p class="mb-1">Rate: 3.0/5.0</p>
@@ -108,10 +249,51 @@ Job Seeker Information
                                 Having a supportive and understanding boss has made the work environment
                                 enjoyable.</span></p>
         </a>
-        <a href="#" class="list-group-item list-group-item-action">
+        <a href="javascript:void(0)" class="list-group-item">
             <div class="d-flex w-100 justify-content-between my-2">
                 <h5 class="mb-1 text-primary">Lottery Fundraiser</h5>
-                <button type="button" class="btn btn-primary btn-sm px-4 me-md-2">Edit</button>
+                <button type="button" class="btn btn-primary btn-sm px-4 me-md-2" data-bs-toggle="modal"
+                        data-bs-target="#EditReview3">Edit
+                </button>
+
+                <!-- The Modal -->
+                <div class="modal" id="EditReview3">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-content">
+
+                            <!-- Modal Header -->
+                            <div class="modal-header">
+                                <h4 class="modal-title">Edit Review</h4>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                            </div>
+
+                            <!-- Modal Body -->
+                            <div class="modal-body">
+                                <!-- The form goes here -->
+                                <form>
+                                    <div class="form-group mb-3">
+                                        <label for="Rating" class="form-label">Rate</label>
+                                        <input type="number" class="form-control" id="Rating" min="0" max="5" step="0.5"
+                                               placeholder="Enter your rating">
+                                    </div>
+                                    <div class="form-group mb-3">
+                                        <label for="Comments" class="form-label">Comment</label>
+                                        <textarea class="form-control" id="Comments" rows="5"
+                                                  placeholder="Add your comments here"></textarea>
+                                    </div>
+
+                                    <!-- Modal Footer -->
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
+                                        </button>
+                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <p class="mb-1">Excel Fundraising</p>
             <p class="mb-1">Rate: 3.0/5.0</p>
