--- a/templates/base.html
+++ b/templates/base.html
@@ -11,16 +11,20 @@
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
+
     <style>
         main {
-            padding-top: 120px; /* Adjust the padding to match the height of your fixed header */
+            padding-top: 120px;
+            /* Adjust the padding to match the height of your fixed header */
         }
+
         header {
             position: fixed;
             width: 100%;
-            background-color: #ffffff; /* Add your desired background color */
-            z-index: 1000; /* Make sure the header is on top of other elements */
+            background-color: #ffffff;
+            /* Add your desired background color */
+            z-index: 1000;
+            /* Make sure the header is on top of other elements */
         }
     </style>
 </head>
@@ -35,9 +39,6 @@
                     </a>
                 </div>
 
-                <nav class=" nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Home</a>
-                </nav>
                 <div class="col-6 d-flex justify-content-end align-items-center">
                     <!--  已经登录 显示头像    -->
                     <div class="dropdown text-end">
