--- a/templates/employerInfo.html
+++ b/templates/employerInfo.html
@@ -8,15 +8,25 @@ Company Information
 
 {% block body_block %}
 
+<style>
+    .bd-sidebar {
+        height: 60vh;
+        overflow-y: auto;
+        padding: 20px;
+    }
+</style>
+
+
 <!-- My profile部分 -->
 <div class="row pb-4 mb-4 border-bottom">
     <div class="col">
         <h3 class=" fst-italic ">
             My Profile
-        </h3></div>
+        </h3>
+    </div>
     <div class="col-auto">
         <button type="button" class="btn btn-primary btn-sm px-4 me-md-2" data-bs-toggle="modal"
-                data-bs-target="#profileModal">Edit
+            data-bs-target="#profileModal">Edit
         </button>
 
         <!-- The Modal -->
@@ -36,33 +46,28 @@ Company Information
                         <form>
                             <div class="form-group mb-3">
                                 <label for="username" class="form-label">Company name</label>
-                                <input type="text" class="form-control" id="username"
-                                       placeholder="Company name">
+                                <input type="text" class="form-control" id="username" placeholder="Company name">
                             </div>
                             <div class="form-group mb-3">
                                 <label for="phone" class="form-label">Phone</label>
-                                <input type="text" class="form-control" id="phone"
-                                       placeholder="Phone">
+                                <input type="text" class="form-control" id="phone" placeholder="Phone">
                             </div>
                             <div class="form-group mb-3">
                                 <label for="Email" class="form-label">Email</label>
-                                <input type="email" class="form-control" id="Email"
-                                       placeholder="name@example.com">
+                                <input type="email" class="form-control" id="Email" placeholder="name@example.com">
                             </div>
                             <div class="form-group mb-3">
                                 <label for="City" class="form-label">City</label>
-                                <input type="text" class="form-control" id="City"
-                                       placeholder="City">
+                                <input type="text" class="form-control" id="City" placeholder="City">
                             </div>
                             <div class="form-group mb-3">
                                 <label for="Address" class="form-label">Address</label>
-                                <input type="text" class="form-control" id="Address"
-                                       placeholder="Address">
+                                <input type="text" class="form-control" id="Address" placeholder="Address">
                             </div>
                             <div class="form-group mb-3">
                                 <label for="Introduction" class="form-label">Company Introduction</label>
                                 <textarea class="form-control" id="Introduction" rows="5"
-                                                  placeholder="Introduction"></textarea>
+                                    placeholder="Introduction"></textarea>
                             </div>
 
                             <!-- Modal Footer -->
@@ -100,10 +105,11 @@ Company Information
     <div class="col">
         <h3 class=" fst-italic ">
             My Posts
-        </h3></div>
+        </h3>
+    </div>
     <div class="col-auto">
         <button type="button" class="btn btn-primary btn-sm px-4 me-md-2" data-bs-toggle="modal"
-                data-bs-target="#postModal">New
+            data-bs-target="#postModal">New
         </button>
 
         <!-- The Modal -->
@@ -123,18 +129,15 @@ Company Information
                         <form>
                             <div class="form-group mb-3">
                                 <label for="Job" class="form-label">Job</label>
-                                <input type="text" class="form-control" id="Job"
-                                       placeholder="Job">
+                                <input type="text" class="form-control" id="Job" placeholder="Job">
                             </div>
                             <div class="form-group mb-3">
                                 <label for="Salary" class="form-label">Salary</label>
-                                <input type="number" class="form-control" id="Salary"
-                                       placeholder="Salary">
+                                <input type="number" class="form-control" id="Salary" placeholder="Salary">
                             </div>
                             <div class="form-group mb-3">
                                 <label for="JobCity" class="form-label">City</label>
-                                <input type="text" class="form-control" id="JobCity"
-                                       placeholder="City">
+                                <input type="text" class="form-control" id="JobCity" placeholder="City">
                             </div>
                             <div class="form-group mb-3">
                                 <label for="JobType" class="form-label">Job Type</label>
@@ -157,7 +160,7 @@ Company Information
                             <div class="form-group mb-3">
                                 <label for="Note" class="form-label">Note</label>
                                 <textarea class="form-control" id="Note" rows="5"
-                                                  placeholder="Add any additional comments or notes"></textarea>
+                                    placeholder="Add any additional comments or notes"></textarea>
                             </div>
 
                             <!-- Modal Footer -->
@@ -173,8 +176,22 @@ Company Information
     </div>
 </div>
 
-<div class="bd-content ps-lg-2  pb-4 mb-4 ">
+<div class="bd-sidebar ps-lg-2  pb-4 mb-4 ">
     <div class=list-group>
+        <a href="#" class="list-group-item list-group-item-action">
+            <div class="d-flex w-100 justify-content-between my-2">
+                <h5 class="mb-1 text-primary">Sales Associate</h5>
+                <small>3 days ago</small>
+            </div>
+            <p class="mb-1">Salary: £18.90 / hour</p>
+        </a>
+        <a href="#" class="list-group-item list-group-item-action">
+            <div class="d-flex w-100 justify-content-between my-2">
+                <h5 class="mb-1 text-primary">Sales Associate</h5>
+                <small>3 days ago</small>
+            </div>
+            <p class="mb-1">Salary: £18.90 / hour</p>
+        </a>
         <a href="#" class="list-group-item list-group-item-action">
             <div class="d-flex w-100 justify-content-between my-2">
                 <h5 class="mb-1 text-primary">Sales Associate</h5>
@@ -205,7 +222,7 @@ Company Information
     My Reviews
 </h3>
 
-<div class="bd-content ps-lg-2  pb-4 mb-4 ">
+<div class="bd-sidebar ps-lg-2  pb-4 mb-4 ">
     <div class=list-group>
         <a href="#" class="list-group-item list-group-item-action">
             <div class="d-flex w-100 justify-content-between my-2">
@@ -214,10 +231,10 @@ Company Information
             <p class="mb-1">Job: Sales Associate</p>
             <p class="mb-1">Rate: 3.0/5.0</p>
             <p class="mb-1">Review: <span class="text-secondary">He consistently demonstrated excellent
-                                customer service skills, always ensuring that our shoppers had a positive and
-                                satisfying experience. Their friendly demeanor, coupled with a strong product
-                                knowledge, made them a valuable asset in assisting customers with their inquiries
-                                and product choices.</span></p>
+                    customer service skills, always ensuring that our shoppers had a positive and
+                    satisfying experience. Their friendly demeanor, coupled with a strong product
+                    knowledge, made them a valuable asset in assisting customers with their inquiries
+                    and product choices.</span></p>
         </a>
         <a href="#" class="list-group-item list-group-item-action">
             <div class="d-flex w-100 justify-content-between my-2">
@@ -226,10 +243,10 @@ Company Information
             <p class="mb-1">Job: Sales Associate</p>
             <p class="mb-1">Rate: 3.0/5.0</p>
             <p class="mb-1">Review: <span class="text-secondary">He consistently demonstrated excellent
-                                customer service skills, always ensuring that our shoppers had a positive and
-                                satisfying experience. Their friendly demeanor, coupled with a strong product
-                                knowledge, made them a valuable asset in assisting customers with their inquiries
-                                and product choices.</span></p>
+                    customer service skills, always ensuring that our shoppers had a positive and
+                    satisfying experience. Their friendly demeanor, coupled with a strong product
+                    knowledge, made them a valuable asset in assisting customers with their inquiries
+                    and product choices.</span></p>
         </a>
         <a href="#" class="list-group-item list-group-item-action">
             <div class="d-flex w-100 justify-content-between my-2">
@@ -238,10 +255,10 @@ Company Information
             <p class="mb-1">Job: Sales Associate</p>
             <p class="mb-1">Rate: 5.0/5.0</p>
             <p class="mb-1">Review: <span class="text-secondary">This student exhibited great attention
-                                to detail
-                                in maintaining the store's appearance and cleanliness. Their commitment to keeping
-                                shelves organized and well-stocked significantly contributed to a pleasant shopping
-                                environment for our customers..</span></p>
+                    to detail
+                    in maintaining the store's appearance and cleanliness. Their commitment to keeping
+                    shelves organized and well-stocked significantly contributed to a pleasant shopping
+                    environment for our customers..</span></p>
         </a>
     </div>
 </div>
